# computational_genetic_genealogy

./: .dockerignore  .gitignore  .jupyterlite.doit.db  CLAUDE.md  Dockerfile  MIGRATION_PLAN.md  README.md  build_jupyter.sh  create_pedigree_definition.R  docker-compose.yml  docker-entrypoint.sh  docker_save.py  docker_transfer_files.sh  jupyter-lite.json  lite-config.json  pyproject.toml  setup_docker_env_file.sh  simulate_pedigree_msprime.py  simulate_pedigree_ped-sim.py  test_ibd_index.py  update_labs.sh
docs/: contents.html  index.html  index2.html  lab_lecture_template.html  styles.css
instructions/: 1_2_install_git.md  1_3_clone_repository.md  1_4_install_docker.md  1_5_run_docker.md  1_6_install_vscode.md  DRAFT_Lab10_distributions.ipynb  DRAFT_Lab11_Simulate_Data_msprime_DRAFT.ipynb  DRAFT_Lab9_Relationship_Prediction_v1.ipynb  For_Instructor.ipynb  Lab0_Code_Environment.ipynb  Lab0_Code_Environment_DRAFT.ipynb  Lab0_Get_OpenSNP_data.ipynb  Lab0_Get_onekgenomes_data.ipynb  Lab10_Simulate_Data_msprime.ipynb  Lab12_Bonsai.ipynb  Lab12_Bonsai_Fundamentals.ipynb  Lab1_Python_Basics.ipynb  Lab2_Exploring_onekgenomes.ipynb  Lab3_Get_Raw_DNA_profile.ipynb  Lab3_Process_Raw_DNA_profile.ipynb  Lab3_get_genotype_data.ipynb  Lab4_Quality_Control.ipynb  Lab5_IBD_Detection.ipynb  Lab5_IBD_Detection_DRAFT.ipynb  Lab5_IBD_Detection_IBIS.ipynb  Lab5_IBD_Detection_hap_ibd.ipynb  Lab5_IBD_detection_DRAFT.ipynb  Lab6_Explore_Gnomix.ipynb  Lab6_IBD_Detection.ipynb  Lab6_IBD_Detection_hap_ibd.ipynb  Lab7_IBD_Detection_refined_ibd.ipynb  Lab8_IBD_1000_Genomes.ipynb  setup.ipynb  (+5 more)
(+568 files in other folders)
