[tool.poetry]
name = "Computational Genetic Genealogy"
version = "0.1.0"
description = ""
authors = ["lakishadavid <ltdavid2@illinois.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.79"
psycopg2-binary = "^2.9.10"
cfn-lint = "^1.22.2"
botocore = "^1.35.85"
matplotlib = "^3.4"
requests = "^2.32.3"
lineage = "^4.4.1"
pyliftover = "^0.4.1"
tqdm = "^4.67.1"
pandas = "^2.2.3"
inputimeout = "^1.0.4"
seaborn = "^0.13.2"
ipython = "^8.31.0"
numpy = "^2.2.3"
scipy = "^1.14.1"
plotly = "^5.24.1"
cdlib = "^0.4.0"
python-decouple = "^3.8"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
notebook = "^7.3.2"
nbconvert = "^7.16.6"
ace-tools = "^0.0"
rpy2 = "^3.5.17"
intervaltree = "^3.1.0"
stdpopsim = "^0.2.0"
tskit = "^0.6.0"
pygraphviz = "^1.14"
jupyterlab = "^4.3.6"
jupyterlite = "^0.5.1"
jupyterlite-pyodide-kernel = "^0.5.2"
numba = "^0.61.0"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
sklearn-crfsuite = "0.3.6"
xgboost = "1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
